# pipewire.hs

./: .gitattributes  Justfile  PwConstraint.hs  PwController.hs  PwState.hs  README.md  cabal.project  flake.nix  pw-controller.cabal
docs/: CHANGELOG.md  Pipewire-CContext.html  Pipewire-Constants.html  Pipewire-CoreAPI-CContext.html  Pipewire-CoreAPI-Context.html  Pipewire-CoreAPI-Core.html  Pipewire-CoreAPI-Initialization.html  Pipewire-CoreAPI-Link.html  Pipewire-CoreAPI-Loop.html  Pipewire-CoreAPI-MainLoop.html  Pipewire-CoreAPI-Node.html  Pipewire-CoreAPI-Proxy.html  Pipewire-CoreAPI-Registry.html  Pipewire-CoreAPI-ThreadLoop.html  Pipewire-Enum.html  Pipewire-IDMap.html  Pipewire-Instance.html  Pipewire-Internal.html  Pipewire-Prelude.html  Pipewire-Protocol.html  Pipewire-RegistryState.html  Pipewire-SPA-Buffers.html  Pipewire-SPA-CContext.html  Pipewire-SPA-POD.html  Pipewire-SPA-Parameters.html  Pipewire-SPA-Utilities-Dictionary.html  Pipewire-SPA-Utilities-Hooks.html  Pipewire-Stream.html  Pipewire-Utilities-Properties.html  Pipewire-Video.html  Pipewire.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  (+17 more)
html/: Pipewire-CoreAPI-CContext.html  Pipewire-CoreAPI-Context.html  Pipewire-CoreAPI-MainLoop.html  Pipewire-CoreAPI-Registry.html  Pipewire-Enum.html  Pipewire-IDMap.html  Pipewire-SPA-Utilities-CContext.html  Pipewire-SPA-Utilities-Hooks.html  Pipewire-Utilities-CContext.html  doc-index-All.html  doc-index-I.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-W.html  pipewire.haddock
pipewire/: LICENSE  README.md  pipewire.cabal
pipewire/examples/: PwLink.hs  PwMetadata.hs  PwMon.hs  PwPlay.hs  Tutorial1.hs  Tutorial2.hs  Tutorial3.hs  Tutorial4.hs  Tutorial6.hs  VideoSrc.hs
pipewire/src/: Pipewire.hs
pipewire/src/Pipewire/: CContext.hs  Constants.hs  Context.hs  Core.hs  CoreCTX.hs  Enum.hsc  IDMap.hs  Instance.hs  Internal.hs  Prelude.hs  Protocol.hs  Raw.hs  RegistryState.hs  Stream.hs  Structs.hs  Video.hs
pipewire/src/Pipewire/CoreAPI/: CContext.hs  Client.hs  Context.hs  Core.hs  Device.hs  Initialization.hs  Link.hs  Loop.hs  MainLoop.hs  Node.hs  Proxy.hs  Registry.hs  ThreadLoop.hs
pipewire/src/Pipewire/Extensions/: Metadata.hs
pipewire/src/Pipewire/SPA/: Buffers.hs  CContext.hs  POD.hs  Parameters.hs
pipewire/src/Pipewire/SPA/Utilities/: CContext.hs  Dictionary.hs  Hooks.hs
pipewire/src/Pipewire/Utilities/: CContext.hs  Properties.hs  PropertiesCTX.hs
pw-controller/: README.md  pw-controller.cabal
pw-controller/app/: PwController.hs
pw-controller/src/: PwConstraint.hs  PwMonParser.hs  PwState.hs
pw-controller/src/PwController/: Eval.hs  Expr.hs  Matcher.hs  NodePorts.hs  Parser.hs
pw-controller/test/: Spec.hs
pw-controller/test/config/: demo.conf  demo.golden  empty.golden  syntax.conf  syntax.golden
pw-player/: README.md  pw-player.cabal
pw-player/app/: PwPlayer.hs
pw-player/src/PwPlayer/: Sound.hs  Stereo.hs
pw-player/test/: Spec.hs
