cabal-version: 3.0
name: pw-controller
version: 0.1
synopsis: Apply rules to your pipewire links.
description:
  The goal of pw-controller is to ensure custom links are defined.

category: System
author: Tristan de Cacqueray
maintainer: tristan.cacqueray@gmail.com
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple
extra-doc-files: CHANGELOG.md

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-T

common common
  build-depends: base <5
  default-language: GHC2021
  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -Wno-partial-type-signatures
    -fwrite-ide-info
    -Wno-missing-methods

  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    StrictData
    ViewPatterns

library
  import: common
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    PwController.Eval
    PwController.Expr
    PwController.Matcher
    PwController.NodePorts
    PwController.Parser

  build-depends:
    containers,
    megaparsec,
    pipewire,
    regex-tdfa,
    text,

executable pw-controller
  import: common, executable
  hs-source-dirs: app
  main-is: PwController.hs
  build-depends:
    optparse-applicative,
    pipewire,
    pw-controller,
    rio,
    text,

test-suite test-pw-controller
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    pipewire,
    pretty-simple <5,
    pw-controller,
    tasty <1.5,
    tasty-golden <2.4,
    tasty-hunit <2,
    text,
